# scheduler

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EPIC.md  Makefile  README.md  SECURITY.md  docker-compose.yml  langgraph.json  pyproject.toml  roster.yaml
workforce/: .env.example  .gitignore  NOTICE  README.md  langgraph.json  pyproject.toml  roster.yaml
workforce/agent_toolkit/: __init__.py  a2a_client.py  a2a_gate.py  approval.py  authority.py  budget.py  budget_monitor.py  collaboration.py  eval_dataset.py  evaluations.py  event_routing.py  gcp_auth.py  github_ops.py  gmail_client.py  governance.py  hitl.py  http_probe.py  lanes.py  langsmith_setup.py  learning_loop.py  ops_report.py  otel.py  payroll.py  policy.py  pr_eval.py  revenuecat.py  slack_a2a_bridge.py  slack_tool.py  store_ops.py  work_board.py  write_gate.py
workforce/governance/: privilege-classes.yaml
workforce/scripts/: audit_remote_node.sh  bootstrap_fleet.sh  channel_watcher.py  check_capability_coverage.py  check_deploy_env.py  check_roster_coverage.py  eval_gate.py  event_receiver.py  fleet_control.py  provision_identity.py  run_canary.py  run_eval.py  run_git_sync_auditor.sh  run_local_git_maintainer.sh  run_memory_sync.sh  run_ops_graph.py  run_qa_assignment.py  run_slack_a2a_bridge.py  setup_crons.py  setup_evaluators.py  shift_dispatcher.py  slack_setup.py
workforce/tests/: test_a2a_gate.py  test_android_automation_engineer.py  test_aso_store_listing_agent.py  test_attribution_file_digest_issue.py  test_audit_risk_director.py  test_audit_risk_director_over_escalation.py  (+73 more)
(+760 files in other folders)
