[project]
name = "agent-workforce"
version = "0.1.0"
description = "Deployed LangGraph agents automating Scheduler QA (+ Marketing fast-follow)"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2.0",
  "langgraph-cli[inmem]>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-anthropic>=0.2.0",
  "langchain-deepseek>=0.1.0",
  "langchain-openai>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "httpx>=0.27.0",
  "PyGithub>=2.3.0",
  "PyYAML>=6.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "pydantic>=2.7.0",
  "typing-extensions>=4.11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent_toolkit"]
